[gd_scene load_steps=2 format=2]

[ext_resource path="res://SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -295.0
margin_right = 460.0
margin_bottom = 295.0
rect_min_size = Vector2( 920, 590 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.403922, 0.403922, 0.403922, 1 )

[node name="SettingTab" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Video" type="Tabs" parent="SettingTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTab/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTab/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 25
columns = 2

[node name="DispModeLab" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 3.0
margin_right = 88.0
margin_bottom = 17.0
text = "Display mode"

[node name="DispOptBtn" type="OptionButton" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 766.0
margin_right = 862.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VsyncModeLab" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 58.0
margin_right = 88.0
margin_bottom = 72.0
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 45.0
margin_right = 862.0
margin_bottom = 85.0
size_flags_horizontal = 10

[node name="DispFpsLab" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 123.0
margin_right = 88.0
margin_bottom = 137.0
text = "Display FPS"

[node name="DispFpsBtn" type="CheckButton" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 110.0
margin_right = 862.0
margin_bottom = 150.0
size_flags_horizontal = 10

[node name="MaxFpsLab" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 176.0
margin_right = 88.0
margin_bottom = 190.0
text = "Max FPS"

[node name="FpsContainer" type="HBoxContainer" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 414.0
margin_top = 175.0
margin_right = 862.0
margin_bottom = 191.0
size_flags_horizontal = 10

[node name="MinFpsVal" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings/FpsContainer"]
margin_top = 1.0
margin_right = 16.0
margin_bottom = 15.0
text = "30"

[node name="MaxFpsSlider" type="HSlider" parent="SettingTab/Video/MarginContainer/VideoSettings/FpsContainer"]
margin_left = 20.0
margin_right = 420.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = 30.0
max_value = 120.0
step = 30.0
value = 60.0

[node name="MaxFpsVal" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings/FpsContainer"]
margin_left = 424.0
margin_top = 1.0
margin_right = 448.0
margin_bottom = 15.0
text = "120"

[node name="BloomLab" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 229.0
margin_right = 88.0
margin_bottom = 243.0
text = "Bloom"

[node name="BloomBtn" type="CheckButton" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 216.0
margin_right = 862.0
margin_bottom = 256.0
size_flags_horizontal = 10

[node name="BrightnessVal" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_top = 282.0
margin_right = 88.0
margin_bottom = 296.0
text = "Brightness"

[node name="BrightnessContainer" type="HBoxContainer" parent="SettingTab/Video/MarginContainer/VideoSettings"]
margin_left = 438.0
margin_top = 281.0
margin_right = 862.0
margin_bottom = 297.0
size_flags_horizontal = 10

[node name="MinBrightnessVal2" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings/BrightnessContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="BrightnessSlider" type="HSlider" parent="SettingTab/Video/MarginContainer/VideoSettings/BrightnessContainer"]
margin_left = 12.0
margin_right = 412.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
max_value = 2.0
step = 0.1
value = 1.0

[node name="MaxBrightnessVal" type="Label" parent="SettingTab/Video/MarginContainer/VideoSettings/BrightnessContainer"]
margin_left = 416.0
margin_top = 1.0
margin_right = 424.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "2"

[node name="Audio" type="Tabs" parent="SettingTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTab/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingTab/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 25
columns = 2

[node name="MasterVolLab" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_top = 1.0
margin_right = 96.0
margin_bottom = 15.0
text = "Master volume"

[node name="MasterContainer" type="HBoxContainer" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_left = 425.0
margin_right = 862.0
margin_bottom = 16.0
size_flags_horizontal = 10

[node name="MinBrightnessVal2" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/MasterContainer"]
margin_top = 1.0
margin_right = 21.0
margin_bottom = 15.0
text = "-50"

[node name="BrightnessSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/AudioSettings/MasterContainer"]
margin_left = 25.0
margin_right = 425.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MaxBrightnessVal" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/MasterContainer"]
margin_left = 429.0
margin_top = 1.0
margin_right = 437.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "0"

[node name="MusicVolLab" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 56.0
text = "Music volume"

[node name="MusicContainer" type="HBoxContainer" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_left = 425.0
margin_top = 41.0
margin_right = 862.0
margin_bottom = 57.0
size_flags_horizontal = 10

[node name="MinBrightnessVal2" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/MusicContainer"]
margin_top = 1.0
margin_right = 21.0
margin_bottom = 15.0
text = "-50"

[node name="BrightnessSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/AudioSettings/MusicContainer"]
margin_left = 25.0
margin_right = 425.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MaxBrightnessVal" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/MusicContainer"]
margin_left = 429.0
margin_top = 1.0
margin_right = 437.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "0"

[node name="SfxVolLab" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_top = 83.0
margin_right = 96.0
margin_bottom = 97.0
text = "SFX volume"

[node name="SfxContainer" type="HBoxContainer" parent="SettingTab/Audio/MarginContainer/AudioSettings"]
margin_left = 425.0
margin_top = 82.0
margin_right = 862.0
margin_bottom = 98.0
size_flags_horizontal = 10

[node name="MinBrightnessVal2" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/SfxContainer"]
margin_top = 1.0
margin_right = 21.0
margin_bottom = 15.0
text = "-50"

[node name="BrightnessSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/AudioSettings/SfxContainer"]
margin_left = 25.0
margin_right = 425.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MaxBrightnessVal" type="Label" parent="SettingTab/Audio/MarginContainer/AudioSettings/SfxContainer"]
margin_left = 429.0
margin_top = 1.0
margin_right = 437.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "0"

[node name="Gameplay" type="Tabs" parent="SettingTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTab/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GameplaySettings" type="GridContainer" parent="SettingTab/Gameplay/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 25
columns = 2

[node name="MouseSensiLab" type="Label" parent="SettingTab/Gameplay/MarginContainer/GameplaySettings"]
margin_top = 1.0
margin_right = 113.0
margin_bottom = 15.0
text = "Mouse sensitivity"

[node name="MouseSensiContainer" type="HBoxContainer" parent="SettingTab/Gameplay/MarginContainer/GameplaySettings"]
margin_left = 418.0
margin_right = 862.0
margin_bottom = 16.0
size_flags_horizontal = 10

[node name="MinMouseSensiVal" type="Label" parent="SettingTab/Gameplay/MarginContainer/GameplaySettings/MouseSensiContainer"]
margin_top = 1.0
margin_right = 28.0
margin_bottom = 15.0
text = "0.05"

[node name="MouseSensiSlider" type="HSlider" parent="SettingTab/Gameplay/MarginContainer/GameplaySettings/MouseSensiContainer"]
margin_left = 32.0
margin_right = 432.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1

[node name="MaxMouseSensiVal" type="Label" parent="SettingTab/Gameplay/MarginContainer/GameplaySettings/MouseSensiContainer"]
margin_left = 436.0
margin_top = 1.0
margin_right = 444.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "3"
